--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagenes/cocologo2.png">
     
-    <link rel="stylesheet" href="Css/bootstrap-5.3.1-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="Css/Style.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="Style.css">
     <title>Coco Men Official</title>
 
 </head>
