--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a href="index.html"> <img src="imagenes/COCOlogo.ico" class="logos" alt="#"></a>
+          <a href="index.html"> <img src="COCOlogo.ico" class="logos" alt="#"></a>
           <div  class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -48,13 +48,13 @@ lo que ofrecemos
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="imagenes/relojjuntos1.png" class="d-block w-100" alt="reloj1">
+      <img src="relojjuntos1.png" class="d-block w-100" alt="reloj1">
     </div>
     <div class="carousel-item">
-      <img src="imagenes/relojjuntos2.png" class="d-block w-100" alt="reloj2">
+      <img src="relojjuntos2.png" class="d-block w-100" alt="reloj2">
     </div>
     <div class="carousel-item">
-      <img src="imagenes/relojjuntos3.png" class="d-block w-100" alt="reloj4">
+      <img src="relojjuntos3.png" class="d-block w-100" alt="reloj4">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -79,7 +79,7 @@ lo que ofrecemos
     <div class="row">
       <div class="col">
         
-        <a class="logos" href="https://www.instagram.com/_cocomen_/" target="_blank" > Nuestras Redes Social: <br><img id="Inta" src="imagenes/instagram_f_icon-icons.com_65485.ico" alt="instagram" >
+        <a class="logos" href="https://www.instagram.com/_cocomen_/" target="_blank" > Nuestras Redes Social: <br><img id="Inta" src="instagram_f_icon-icons.com_65485.ico" alt="instagram" >
           @_cocomen_
           <br>
           
@@ -96,7 +96,7 @@ lo que ofrecemos
         Metodo de Pago:
         <div class="centrar" class="row">
           Pago en Efectivo <br>
-        Mercado pago: <a href=""><img src="imagenes/icons8-mercado-pago-48.png" class="logos" alt="mercado"></a> 
+        Mercado pago: <a href=""><img src="icons8-mercado-pago-48.png" class="logos" alt="mercado"></a> 
       </div>
       </div>
     </div>
