--- a/Compras.html
+++ b/Compras.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coco oficial Compras</title> 
     <link rel="shortcut icon" href="imagenes/cocologo2.png">
-    <link rel="stylesheet" href="Css/bootstrap-5.3.1-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="Css/Style.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div>
@@ -15,7 +15,7 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <a href="index.html"> <img src="imagenes/COCOlogo.ico" class="logos" alt="#"></a>
+              <a href="index.html"> <img src="COCOlogo.ico" class="logos" alt="#"></a>
               <div  class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
