--- a/Relojes.html
+++ b/Relojes.html
@@ -52,7 +52,7 @@
 
 <div  class="col" id="Venta">
     <div class="card" style="width: 18rem;">
-        <img src="/reloj1.jpg" class="card-img-top" alt="reloj1">
+        <img src="reloj1.jpg" class="card-img-top" alt="reloj1">
         <div class="card-body">
           <h5 class="card-title">black Time</h5>
           <p class="card-text">una edicion black con correa de cuero  <br>5.300$</p>
